--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "name": "njs-clase-38",
+  "name": "njs-clase-41",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap-icons": "^1.11.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.6.2",
